2014-10-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Decrease the in-memory nvti cache size, reducing the memory consumption
	of all scanner processes by ~6m.

	* base/nvticache.c (nvticache_init, nvticache_free): Call glib hash
	table helpers directly.
	(nvticache_get): Insert the nvti's src as hash table value instead of
	the whole nvti struct. Return the nvti directly to the caller, who
	should free it accordingly.
	(nvticache_get_by_oid_full): Adjust for the nvti src value being stored
	directly in the hash table.
	(nvticache_get_src_by_oid): Remove unused function.

	* base/nvticache.h: Adjust and remove functions prototypes.

	* base/nvti.c (free_nvti_for_hash_table, nvtis_new, nvtis_free)
	(nvtis_add, nvtis_remove, nvtis_lookup, nvti_shrink): Remove unused
	functions.

	* base/nvti.h: Remove deleted functions prototypes and nvtis_t typedef.

2014-10-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_func.c (insert_nasl_func): Replaced emalloc() by
	g_malloc0() and estrdup() by g_strdup().
	(nasl_func_call): Replaced emalloc() by g_malloc0() and
	efree() by g_free().
	(free_func): Replaced efree() by gfree() and free() by g_free().

	* nasl/nasl_misc_funcs.c (nasl_make_list, nasl_make_array, nasl_keys,
	nasl_func_named_args, nasl_gettimeofday, nasl_localtime, nasl_dec2str):
	Replaced emalloc() by g_malloc0().

	* nasl/nasl_cert.c (build_hostname_list, make_hexstring, get_name):
	Replaced emalloc() by g_malloc0().
	(get_name, nasl_cert_query): Replaced emalloc() by g_malloc0() and
	estrdup() by g_strdup().

2014-10-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_isotime.c (nasl_isotime_now, nasl_isotime_scan,
	nasl_isotime_print, nasl_isotime_add): Replaced estrdup() by g_strdup().

2014-10-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/network.c (internal_recv): Don't preallocate buffer memory.
	This fixes a possible memory leak that led to growing scanner process
	size over time.
