@@ -1450,3 +1450,65 @@ nvti_to_keyfile (const nvti_t * n, const gchar * fn)
 
   return (0);
 }
+
+/* Collections of nvtis. */
+
+/**
+ * @brief Free an NVT Info, for g_hash_table_destroy.
+ *
+ * @param nvti The NVT Info.
+ */
+static void
+free_nvti_for_hash_table (gpointer nvti)
+{
+  nvti_free ((nvti_t *) nvti);
+}
+
+/**
+ * @brief Make a collection of NVT Infos.
+ */
+nvtis_t *
+nvtis_new ()
+{
+  return g_hash_table_new_full (g_str_hash, g_str_equal, NULL,
+                                free_nvti_for_hash_table);
+}
+
+/**
+ * @brief Free a collection of NVT Infos.
+ *
+ * @param nvtis The collection of NVT Infos.
+ */
+void
+nvtis_free (nvtis_t * nvtis)
+{
+  if (nvtis)
+    g_hash_table_destroy (nvtis);
+}
+
+/**
+ * @brief Add an NVT Info to a collection of NVT Infos.
+ *
+ * @param nvtis The collection of NVT Infos.
+ * @param nvti  The NVT Info to add.
+ */
+void
+nvtis_add (nvtis_t * nvtis, nvti_t * nvti)
+{
+  if (nvti)
+    g_hash_table_insert (nvtis, (gpointer) nvti_oid (nvti), (gpointer) nvti);
+}
+
+/**
+ * @brief Add an NVT Info to a collection of NVT Infos.
+ *
+ * @param nvtis The collection of NVT Infos.
+ * @param oid   The OID of the NVT.
+ *
+ * @return The NVT Info, if found, else NULL.
+ */
+nvti_t *
+nvtis_lookup (nvtis_t * nvtis, const char *oid)
+{
+  return g_hash_table_lookup (nvtis, oid);
+}
