@@ -154,4 +154,23 @@ int nvti_add_pref (nvti_t *, nvtpref_t *);
 nvti_t *nvti_from_keyfile (const gchar *);
 int nvti_to_keyfile (const nvti_t *, const gchar *);
 
+/* Collections of NVT Infos. */
+
+/**
+ * @brief A collection of information records corresponding to NVTs.
+ */
+typedef GHashTable nvtis_t;
+
+nvtis_t *
+nvtis_new ();
+
+void
+nvtis_free (nvtis_t *);
+
+void
+nvtis_add (nvtis_t *, nvti_t *);
+
+nvti_t *
+nvtis_lookup (nvtis_t *, const char *);
+
 #endif /* not _NVTI_H */
